Update styles.css, small fix to text align

--- a/hubbleTelescope/css/styles.css
+++ b/hubbleTelescope/css/styles.css
@@ -71,8 +71,7 @@ nav ul{
 /*Nav End*/
 section{
 	font-size: 25px;
-	color:white;
-	text-align: center;	
+	color:white;	
 }
 
 p{
